feat: alguns ajustes solicitados pelo saad