@@ -6,11 +6,12 @@ import java.util.*;
 public class SqrtSortBubbleImpl implements SqrtSort {
     protected <E extends Comparable<E>> List<E> executeSort(List<E> list) {
         for (int i = 0; i < list.size(); i++) {
-            for (int j = 1; j < list.size() - 1; j++) {
-                final var compare = list.get(j - 1).compareTo(list.get(j));
-                if (compare < 0) {
-                    final var tmp = list.get(j - 1);
-                    list.set(j - 1, list.get(j));
+            for (int j = 1; j < list.size(); j++) {
+                int jMinus1 = j - 1;
+                final var compare = list.get(jMinus1).compareTo(list.get(j));
+                if (compare > 0) {
+                    final var tmp = list.get(jMinus1);
+                    list.set(jMinus1, list.get(j));
                     list.set(j, tmp);
                 }
             }
@@ -60,6 +61,6 @@ public class SqrtSortBubbleImpl implements SqrtSort {
             collectionOfCollection.set(indexOfListToRemove, listToRemoveWithoutLastElement);
         }
 
-        return List.of(finalCollection);
+        return Arrays.asList(finalCollection);
     }
 }
